# 4dof_fin_ray

./: CMakeLists.txt  README.md  package.xml
launch/: ik_demo.launch.py  view_rviz.launch.py
meshes/visual/: base_link.stl  gripper_base.stl  gripper_link2.stl  horn_case.stl  joint_idler.stl  joint_idler_2.stl  joint_idler_3.stl  joint_without_idler.stl  joint_without_idler2.stl  robot_arm_link_1.stl  robot_arm_link_2.stl
rviz/: my_arm.rviz  my_arm_ik.rviz
src/: my_arm_ik_node.cpp  my_arm_seq_controller_node.cpp
urdf/: my_arm.urdf
